# fake-fsd-realtime-vehicle-video-analysis

./: .gitignore  CMakeLists.txt  CMakeLists_simple.txt  OPTIMIZATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RUNNING_GUIDE.md  demo.py  gui.py  gui_detector.py  requirements.txt  run_gui.sh  setup.sh  simple_video_demo.cpp  vehicle_detector.py
config/: performance_16gb.conf
data/sample_annotations/: sample_video.xml
models/: convert_model.py
qt_gui/: CMakeLists.txt  Info.plist  detection_tracker.cpp  detection_tracker.h  main.cpp  python_detector.py
qt_gui/ProfessionalVideoAnalysis_autogen/: deps
qt_gui/ProfessionalVideoAnalysis_autogen/include/: main.moc  main.moc.d
scripts/: build.sh  build_and_run.sh  download_actual_traffic.sh  download_better_samples.sh  download_real_traffic_videos.sh  download_sample_videos.sh  download_ua_detrac_samples.sh  download_yolo_models.sh  optimize_16gb_ram.sh  setup_dataset.sh  setup_environment.sh  test_crash_fix.sh  test_detection.sh  test_performance_16gb.sh
shaders/: preprocessing.metal  rendering.metal
src/: main.cpp
src/core/: BufferPool.cpp  BufferPool.hpp  PerformanceMonitor.cpp  PerformanceMonitor.hpp  Pipeline.cpp  Pipeline.hpp  Types.hpp
src/modules/: DetectionModule.cpp  DetectionModule.hpp  GUIModule.cpp  GUIModule.hpp  PreprocessingModule.cpp  PreprocessingModule.hpp  VideoInputModule.cpp  VideoInputModule.hpp
src/utils/: BenchmarkRunner.cpp  BenchmarkRunner.hpp  ModelConverter.cpp  ModelConverter.hpp  benchmark_main.cpp  model_converter_main.cpp
standalone_demo/: CMakeLists.txt  CMakeLists_gui.txt  CMakeLists_professional.txt  CMakeLists_simple_gui.txt  ProfessionalVideoGUI  SimpleVideoDemo  gui_video_demo.cpp  professional_gui_demo.cpp  simple_gui_demo.cpp  simple_video_demo.cpp
